# g-code

./: Cargo.toml  README.md
.github/workflows/: geiger.yml  icewrap.yml  lib.yml  rust.yml  security_audit.yml
examples/: parse.rs
fuzz/: Cargo.toml
icewrap/: Cargo.toml  build.rs
icewrap/examples/: cli.rs
icewrap/fuzz/: Cargo.toml
icewrap/fuzz/fuzz_targets/: fuzz_all_decoders.rs  fuzz_all_encoders.rs  fuzz_single_e2e.rs  fuzz_single_encoder.rs
icewrap/src/: decode.rs  encode.rs  lib.rs
icewrap/tests/input/: crash-c58fa467dc18f85dce08996eabb8c55f66febd89
lib/: Cargo.toml
lib/examples/: parse.rs
lib/fuzz/: Cargo.toml
lib/fuzz/fuzz_targets/: fuzz_e2e.rs  fuzz_meatpack.rs  fuzz_parser.rs
lib/src/: lib.rs
lib/src/emit/: command.rs  format.rs  mod.rs  token.rs
lib/src/emit/compact/: meatpack.rs  mod.rs
lib/src/parse/: ast.rs  mod.rs  parser.rs  token.rs
lib/src/parse/compact/: meatpack.rs  mod.rs
lib/src/parse/compact/binary/: blocks.rs  file.rs  mod.rs
lib/tests/: edge_cases.gcode  ncviewer_sample.gcode
src/: ast.rs  emit.rs  lexer.rs  lib.rs  main.rs  parser.lalrpop
src/emit/: command.rs  format.rs  mod.rs  token.rs
src/parse/: ast.rs  lexer.rs  mod.rs  parser.rs  token.rs
tests/: edge_cases.gcode  string.gcode  string_field.gcode  vandy_commodores_logo.gcode  zero_dot.gcode
viewer/: Cargo.toml  index.html
viewer/src/: main.rs
