[package]
name = "g-code"
version = "0.1.2"
authors = ["Sameer Puri <git@purisa.me>"]
edition = "2018"
keywords = ["gcode", "g-code", "plotter", "cnc"]
categories = ["parsing"]
repository = "https://github.com/sameer/g-code"
documentation = "https://docs.rs/g-code"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "GCode parsing and emission"

[badges]
is-it-maintained-issue-resolution = { repository = "sameer/g-code" }
is-it-maintained-open-issues = { repository = "sameer/g-code" }
maintenance = { status = "passively-maintained" }

[dependencies]
peg = "0.7"
num-rational = { version = "0.4", default-features = false }
num = { version = "0.4", default-features = false }
codespan = "0.11"
codespan-reporting = "0.11"
paste = "1"

[dev-dependencies]
pretty_assertions = "0.7"
