[package]
name = "icewrap"
version = "0.1.1"
authors = ["Sameer Puri <crates@purisa.me>"]
edition = "2024"
keywords = ["heatshrink", "no_std", "no-std", "embedded"]
categories = ["no-std", "encoding", "compression", "embedded"]
repository = "https://github.com/sameer/g-code"
documentation = "https://docs.rs/icewrap"
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "Port of Heatshrink to Rust"

[dependencies]
paste = "1"

[features]
default = ["std"]
"std" = []
