[package]
name = "g-code"
version = "0.5.1"
authors = ["Sameer Puri <crates@purisa.me>"]
edition = "2021"
keywords = ["gcode", "g-code", "plotter", "cnc"]
categories = ["parsing"]
repository = "https://github.com/sameer/g-code"
documentation = "https://docs.rs/g-code"
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "g-code parsing and emission"

[badges]
is-it-maintained-issue-resolution = { repository = "sameer/g-code" }
is-it-maintained-open-issues = { repository = "sameer/g-code" }
maintenance = { status = "passively-maintained" }

[dependencies]
codespan = { version = "0.11", optional = true }
codespan-reporting = { version = "0.11", optional = true }
icewrap = { version = "0.1.1", optional = true }
nom = { version = "8", default-features = false, optional = true }
paste = "1"
peg = "0.8"
rust_decimal = { version = "1.36", default-features = false }

[dependencies.serde]
default-features = false
optional = true
version = "1"
features = ["derive"]

[features]
default = ["binary", "codespan_helpers"]
serde = ["dep:serde", "rust_decimal/serde"]
binary = ["dep:icewrap", "dep:nom"]
codespan_helpers = ["codespan", "codespan-reporting"]

[dev-dependencies]
pretty_assertions = "1"
