[package]
name = "g-code-viewer"
version = "0.1.0"
edition = "2021"
authors = ["Sameer Puri <crates@purisa.me>"]
keywords = ["gcode", "g-code", "plotter", "cnc"]
repository = "https://github.com/sameer/g-code"
documentation = "https://docs.rs/g-code"
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "g-code viewer"

[dependencies]
g-code = "0.4.1"
lyon_tessellation = "1.0.13"
uom = "0.35.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
] }
wgpu = { version = "0.19", features = ["webgl", "webgpu"] }
yew = { version = "0.21", features = ["csr"] }
