[package]
name = "g-code-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.g-code]
path = ".."

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_e2e"
path = "fuzz_targets/fuzz_e2e.rs"
test = false
doc = false
bench = false
